--- a/components/Modal/Modal.module.css
+++ b/components/Modal/Modal.module.css
@@ -4,11 +4,12 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.4);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 10000;
+  backdrop-filter: blur(2px);
 }
 .modal {
   background: white;
